Bug#26015 valgrind warning PollGuard::unlock_and_signal()/NdbCondition_Destroy - Add variable "ndbcluster_binlog_terminating" and use that to signal the cluster binlog thread it's time to shutdown. This allows exact control of when the thread shutdown, previous implementation would start shutdown of the thread as soon as the mysqld started shutdown. Now we will shutdown cluster binlog thread in 'ndbcluster_binlog_end'

sql/ha_ndbcluster_binlog.cc:
  Make binlog thread shutdown controllable by using a separet variable
  to communicate the order to shutdown